--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -316,27 +316,32 @@
   /* navbar cart */
   .navbar-cart{
     position: absolute;
-    top: -310px;
+    top: 70px;
     right: 0;
     width: 30%;
     height: 0;
-    background-color: aquamarine;
-    transition: var(--transition);
-    box-shadow: (--dark-shadow);
-    opacity: 0;
+    background-color: rgb(242, 236, 226);
+    transition: 0.5s;
+    box-shadow: black;
+    /* border: 1px dotted gray; */
+    /* opacity: 0; */
    /* z-index: -1; */
+   /* height: auto; */
+   overflow: hidden;
+   z-index: 999;
   }
 
 
 .single{
     width: 100%;
-    height: auto;
-    background-color: #f79837;
+    height: 0;
+    /* background-color: #f79837; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: var(--transition);
-   
+    transition: 0.5s;
+    opacity: 0;
+    border-bottom: 1px dotted gray;
 }
 
 .single .im{
@@ -349,8 +354,38 @@
     width: 120px;
   }
 
-  .navshow{
-    top: 70px;
+  .singleshow{
+    height: 100px;
     opacity: 1;
-    z-index: 999;
+    
+  }
+
+  .navbarshow{
+    height: auto;
+  }
+
+
+  .navButton {
+    /* box-shadow:inset -2px 0px 50px 0px #ffffff; */
+    /* background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%); */
+    background-color:#ffffff;
+    border-radius:0px;
+    border:1px solid #000000;
+    display:inline-block;
+    cursor:pointer;
+    color:#000000;
+    font-family:Arial;
+    font-size:20px;
+    padding:10px 42px;
+    text-decoration:none;
+    text-shadow:0px 0px 0px #ffffff;
+    margin: 20px 0 20px 40px;
+  }
+  .navButton:hover {
+    background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+    background-color:#e9e9e9;
+  }
+  .navButton:active {
+    position:relative;
+    top:1px;
   }
